fix section mobile

--- a/src/index.css
+++ b/src/index.css
@@ -120,8 +120,8 @@ margin-bottom: 60px;
 
 .winner .text {
   background: #111;
-  height: 420px;
-  width: 500px;
+  height: 50%;
+  width: 40%;
   border: 2px solid #eee;
   border-radius: 10px;
   display: flex;
@@ -151,10 +151,19 @@ margin-bottom: 60px;
   cursor: pointer;
   font-size: 50px;
 }
-.ahorcado{
+@media screen and (max-width: 400px) {
+  .winner .text{
+    background: #111;
+    height: 55%;
+    width: 60%;
+    border: 2px solid #eee;
+    border-radius: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 10px;
-    padding: 15px;
-  
+    align-items: center;
+    gap: 40px;
+    font-size: 25px;
+  }
+
 }
